# LIES

./: .gitignore  .tokeignore  CMakeLists.txt  README.md  RunOptions.txt
.github/workflows/: codeql.yml
CS_Client/LIES_Client/: App.xaml  App.xaml.cs  LIES_Client.csproj  LIES_Client.sln  MainWindow.xaml  MainWindow.xaml.cs  packages.config
CS_Client/LIES_Client/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Sources/: client.cpp  lilog.cpp  lilog.hpp  main.cpp  server.cpp
Sources/include/: connectionHandler.hpp  cryptLib.cpp  cryptLib.hpp  decrypt.cpp  decrypt.hpp  encrypt.cpp  encrypt.hpp  inputHandler.hpp  lilog.hpp
Sources/lib/: connectionHandler.cpp  cryptLib.cpp  cryptLib.hpp  decrypt.cpp  decrypt.hpp  encrypt.cpp  encrypt.hpp  inputHandler.cpp  lilog.cpp
TestFiles/: TestFile.txt  TestFile_30.txt  TestFile_ABC.txt
cmake/modules/: FindBOTAN.cmake  FindBotan.cmake
